only use to collect code remainings